gccida/g0/mark_reload_reg_in_use
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_reload_reg_in_use/src/reload1.c:4658:62: error: must use 'enum' tag to refer to type 'reload_type'
void  mark_reload_reg_in_use( unsigned int regno, int opnum, reload_type type, machine_mode mode) 
                                                             ^
                                                             enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_reload_reg_in_use/src/reload1.c:4658:80: error: must use 'enum' tag to refer to type 'machine_mode'
void  mark_reload_reg_in_use( unsigned int regno, int opnum, reload_type type, machine_mode mode) 
                                                                               ^
                                                                               enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_reload_reg_in_use/src/reload1.c:4699:11: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[mode] == MODE_COMPLEX_INT || mode_class_0[mode] == MODE_COMPLEX_FLOAT ) 
          ^~~~~~~~~~~~
          mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_reload_reg_in_use/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_reload_reg_in_use/src/reload1.c:4699:53: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
else if ( mode_class_0[mode] == MODE_COMPLEX_INT || mode_class_0[mode] == MODE_COMPLEX_FLOAT ) 
                                                    ^~~~~~~~~~~~
                                                    mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_reload_reg_in_use/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
4 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/mark_reload_reg_in_use/src/obj/reload1.o] Error 1
